--- a/Experience.html
+++ b/Experience.html
@@ -39,7 +39,7 @@
 	</div>
 	<div id="Group_7">
 		<div id="Contact_Me">
-			<span>Contact Me</span>
+			<span>Contact</span>
 		</div>
 		<div id="Group_3">
 			<svg class="Icon_material-mail-outline" viewBox="3 6 36.987 29.59">
